# gcodescribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yml  compose.yml  main.py  pyproject.toml
.github/scripts/: release-notes.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
packaging/: Dockerfile.pkg
plotter/: README.md  __init__.py  calibration.py  cli.py  config.py  convert.py  document.py  drawing.py  events.py  export.py  gallery_metrics.py  gcode_preview.py  gcode_profile.py  jobmeta.py  linemerge.py  octoprint.py  oneline.py  pipeline.py  position.py  routing.py  safety.py  scene.py  scene_geometry.py  singleline.py  state.py  storage.py  text.py  trace.py  vpype_config.toml
scripts/: build-pkg.sh  dev-menu.sh  dev.sh  flatpak-bundle.sh  flatpak-install.sh
tests/: conftest.py  test_ai_images.py  test_auth.py  test_coloring_jobs.py  test_coloring_pages.py  test_config.py  test_convert_and_export.py  test_document.py  test_events_ws.py  test_fonts_api.py  test_gallery.py  test_linemerge.py  test_linemerge_games.py  test_maze_backend.py  test_mcp_api.py  test_motion_limits.py  test_oneline.py  test_osm_map.py  test_printer_manager.py  test_profile_jobs.py  test_profile_pages.py  test_profiles.py  test_safety.py  test_scene_continuous.py  test_scene_masks.py  test_scene_variable_feeds.py  test_serial_backend.py  test_serial_discovery.py  test_settings_api.py  test_sources_and_trace.py  test_stream.py  test_stroke_fonts_api.py  test_stroke_fonts_render.py  test_sudoku_backend.py
(+327 files in other folders)
