[project]
name = "gcodescribe"
version = "0.1.0"
description = "GCodeScribe — convert documents into pen-plotter G-code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "poppler-utils>=0.1.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "vpype>=1.15.0",
    "vpype-gcode>=0.13.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "redis>=8.0.0",
    "opencv-python-headless>=4.13.0.92",
    "numpy>=2.4.6",
    "reportlab>=4.5.1",
    "fonttools>=4.60.0",
]

[project.scripts]
gcodescribe = "plotter.cli:main"
gcodescribe-web = "plotter.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plotter"]

[tool.hatch.build.targets.wheel.force-include]
"plotter/vpype_config.toml" = "plotter/vpype_config.toml"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# pycodestyle errors/warnings, pyflakes, isort, pyupgrade, flake8-bugbear, comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "C4"]
# B008: FastAPI uses callables (File(), Depends(), …) as argument defaults by design.
ignore = ["B008"]
